log

Sat Mar 12 11:38:11 HSP 2022: 
 exercises.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
./test.sh: line 26: gcc: command not found
Compilation failed
65771b6
Sat Mar 12 11:43:16 HSP 2022: 
./test.sh: line 26: gcc: command not found
Compilation failed
8078e2b
Sat Mar 12 11:46:09 HSP 2022: 
./test.sh: line 26: gcc: command not found
Compilation failed
89588eb
Sat Mar 12 11:47:14 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf6b174
Sat Mar 12 11:50:26 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b3eaf0a
Sat Mar 12 11:51:06 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
487cacc
Sat Mar 12 12:06:41 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
33b86e4
Sat Mar 12 12:07:41 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
327c8e8
Sat Mar 12 12:08:28 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6a300ba
Sat Mar 12 12:09:25 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e1544aa
Sat Mar 12 12:11:41 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d3607a6
Sat Mar 12 12:12:37 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
24f6dd5
Sat Mar 12 12:13:17 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (*vector).datos;
           ~~~~~~~~~^~~~~~
exercises.c:82:20: error: 'vector' is used uninitialized in this function [-Werror=uninitialized]
    (*vector).datos = calloc(n,sizeof(int));
    ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e2f7b92
Sat Mar 12 12:14:12 HSP 2022: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:82:24: error: too few arguments to function 'calloc'
    vector = (Vector *) calloc(sizeof(Vector));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
1938aab
Sat Mar 12 12:17:56 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:82:24: error: too few arguments to function 'calloc'
    vector = (Vector *) calloc(sizeof(Vector));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
466b9f5
Sat Mar 12 12:18:05 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
d1305e8
Sat Mar 12 12:19:37 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
b7adee4
Sat Mar 12 12:20:38 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
17aa550
Sat Mar 12 12:23:55 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
10b78a7
